--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
+      name="Brian Farias"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="./me.JPEG" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Brian's Protfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
